# talk-demos

./: .gitignore  README.md  dask_standard_cluster_workflow_template.yaml  dask_workflow_template.yaml  installation.yaml
argocon-demos/: Makefile  README.md  installation.yaml
argocon-demos/2021-processing-petabytes-with-dask/: Makefile  README.md  dask_standard_cluster_workflow_template.yaml  dask_workflow_template.yaml
argocon-demos/2022-ci-cd-for-data/: Makefile  README.md
argocon-demos/2023-artifact-management-at-scale/: README.md  ci-workflow-s3.yaml  fan-out-fan-in.yaml
argocon-demos/2023-comparing-airflow-vs-argo-workflows-at-scale/: README.md
argocon-demos/2023-configuring-volumes-for-parallel-workflow-reads-and-writes/: README.md
argocon-demos/2023-how-to-train-an-llm-with-argo-workflows-and-hera/: README.md
argocon-demos/2023-how-to-train-an-llm-with-argo-workflows-and-hera/example/: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
argocon-demos/2023-how-to-train-an-llm-with-argo-workflows-and-hera/example/src/talk/: __init__.py  etcd.py  finetune.py  ssd.py  train.py  workflows.py
argocon-demos/2023-leveraging-argo-workflowtemplates-within-a-data-platform/: README.md
argocon-demos/2023-migrating-cicd-from-jenkins-to-argo/: README.md
argocon-demos/2023-migrating-from-jenkins-to-argo-for-cicd/: README.md
argocon-demos/2024-argocd-plugins-as-services/: README.md
argocon-demos/2024-data-science-workflows-made-easy-python-powered-argo-for-your-organization/example/: Dockerfile  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
argocon-demos/2024-data-science-workflows-made-easy-python-powered-argo-for-your-organization/example/assets/: hera-data-science.md
argocon-demos/2024-data-science-workflows-made-easy-python-powered-argo-for-your-organization/example/ds_blog/: __main__.py  a1_diabetes_scenario_script.py  a2_diabetes_functions.py  a3a_workflow.py  a3b_output_yaml.py
argocon-demos/2024-orchestrating-python-functions-natively-with-hera/hera-template/: README.md  pyproject.toml
argocon-demos/2024-orchestrating-python-functions-natively-with-hera/hera-template/hera-template/: cookiecutter.json
argocon-demos/2024-orchestrating-python-functions-natively-with-hera/hera-template/hera-template/{{cookiecutter.name}}/: README.md  pyproject.toml
argocon-demos/2024-orchestrating-python-functions-natively-with-hera/hera-template/hera-template/{{cookiecutter.name}}/src/{{cookiecutter.name}}/: auth.py  image.py  workflows.py
kcd-2025/: README.md
oss-2022/: README.md
workload/: Dockerfile  dask_pipeline.py  requirements.txt
(+121 files in other folders)
