[tool.poetry]
name = "ds-blog"
version = "0.1.0"
description = ""
authors = ["Elliot Gunton <elliot@pipekit.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hera = {extras = ["experimental"], version = "^5.16.2"}
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
