[tool.poetry]
name = "hera-demo-repo"
version = "0.0.0"
description = ""
authors = ["Flaviu Vadan <flaviuvadan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
